// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section > Composição > snapshot: section completa 1`] = `
<div>
  <section
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] bg-zinc-800-alpha-80 border-zinc-400-alpha-10 p-6 before:content-[""] before:absolute before:top-0 before:left-0 before:right-0 before:h-0.5 before:bg-gradient-accent-top before:opacity-80"
  >
    <div
      class="flex items-center gap-3 text-text-zinc-200 mb-4"
    >
      Header
    </div>
    <div
      class="text-text-zinc-200"
    >
      Content
    </div>
  </section>
</div>
`;

exports[`Section > snapshot: section básica 1`] = `
<div>
  <section
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] bg-zinc-800-alpha-80 border-zinc-400-alpha-10 p-6 before:content-[""] before:absolute before:top-0 before:left-0 before:right-0 before:h-0.5 before:bg-gradient-accent-top before:opacity-80"
  >
    <p>
      Conteúdo da seção
    </p>
  </section>
</div>
`;
